kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odprti-racuni-obcine
spec:
  selector:
    app: odprti-racuni-obcine
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: odprti-racuni-obcine-nginx
spec:
  selector:
    app: odprti-racuni-obcine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
